--- a/src/assets/stylesheet/main.css
+++ b/src/assets/stylesheet/main.css
@@ -59,6 +59,38 @@ header {
     color: #d9dee5;
 }
 
-.section__one {
+section {
     height: 700px;
 }
+.section__one {
+    position: relative;
+    background-image: url('../images/image__one.png');
+    background-size: 60% 100%;
+    background-repeat: no-repeat;
+    background-color: #e2e2e2;
+}
+.section__one::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-repeat: repeat;
+    height: 10px;
+    background-size: 20px 20px;
+    background-image:
+    radial-gradient(circle at 10px -5px, transparent 12px, white 13px);
+}
+.section__one::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-repeat: repeat;
+    height: 15px;
+    background-size: 40px 20px;
+    background-image:
+    radial-gradient(circle at 10px 15px, white 12px, transparent 13px);
+}
+
